Unify replay agent fixtures and move scripted SPI to test scope